--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  font-family: "Roboto", Arial, sans-serif;
+}
+
+::selection {
+  color: slateblue;
+}
